# MMCS-CG-OpenGL

./: .gitignore  CMakeLists.txt  Car.cpp  Car.h  ChristmasTree.cpp  ChristmasTree.h  main.cpp
common/: common.cpp  common.h  model.cpp  model.h  model3D.cpp  model3D.h  sceneObject.cpp  sceneObject.h  stb_image.h  transformations.h
ind3-bostan/: main.cpp  my_objects.h
ind3kostikova/: main.cpp
lab11/: Car.cpp  main.cpp
lab12/: common.h  firstShaders.cpp  main.cpp  task1.h  task2.h  task3.h  task4.h  task5.h
lab13/: main.cpp  task1.h  task2.h  task3.h  task4.h  task5.h
shaders/: chessboard.fs.c  color_fragment.fs.c  cube.fs.c  cube.vs.c  cube_vbo.vs.c  ind_shader.fs.c  ind_shader.vs.c  rotate_vertices_x.vs.c  stripes.fs.c  vertices_2d_to_3d.vs.c
shaders/lab13/: bidirectional.fs.c  blinn_phong_source.vs.c  cube_mixed_textured.fs.c  cube_phong_light.fs.c  cube_phong_light.vs.c  cube_textured.vs.c  standard.vs.c  standard_offset.vs.c  toon_shading.fs.c
